# taskMaster

./: .gitignore  Cargo.toml  README.md  a.out  archi.org  auteur  infinite_loop  lol.c  subject_conf.conf  todo.org  wait_and_print
doc/: search-index.js
doc/client/: index.html
line_editing/: Cargo.toml
line_editing/src/: main.rs
multithread_server/: Cargo.toml
multithread_server/src/: lib.rs
ressources/: .cat.conf.swo  2_services.yaml  basic.yaml  cat.conf  panic.yaml  reread.yaml  sample.conf  signal.c  subject_conf.conf  subject_conf.yaml  test_reread.yaml  true_subject_conf.yaml  wrong.conf  yaml_wiki
ressources/infinite_loop/: Cargo.toml
ressources/infinite_loop/src/: main.rs
ressources/scripts/: die_after_n.sh  env.sh  exitcode.sh  loop_ls.sh  ls.sh  pwd.sh  write_to_stderr.sh  write_to_stderr_and_stdout.sh  write_to_stdout.sh
serde_test/: Cargo.toml
src/: cli.rs  cmd.rs  lib.rs  lol  main.rs  process.rs  service.rs  tcp.rs  wait_and_print.rs
src/task_master/: process.rs  service.rs
src/tm_mod/: cmd.rs  config.rs  error_utils.rs  exec_error.rs  mod.rs
src/tm_mod/service/: mod.rs
src/tm_mod/service/thread/: mod.rs  process.rs
test/getopt/: Cargo.toml  \
test/getopt/src/: main.rs
test/serde_test/: Cargo.toml
test/serde_test/src/: lib.rs
thread_pool/: Cargo.toml
