[package]
name = "task_master"
version = "0.1.0"
authors = ["vcombey", "ade-sede"]

[lib]
name = "task_master"
srcs = "src/lib.rs"

[[bin]]
name = "server"
src = "src/bin/server" 

[[bin]]
name = "client"
src = "src/bin/client" 

[dependencies]
serde_derive = "1.0"
serde = "1.0.27"
serde_json = "1.0.9"
liner = "*"
phf = "0.7.21"

[dependencies.yaml-rust]
git = "https://github.com/chyh1990/yaml-rust.git"
